# Kraken

./: .env  .gitignore  Cargo.toml  Config.toml  Makefile  README.md  Rocket.toml  install.sh  installer-compile.sh  installer-dev.sh  installer-pi.sh  kraken.service  kraken_runner_compile.sh  kraken_runner_pi.sh  platform.json  rust-toolchain
.cargo/: config.toml
.github/workflows/: rust.yml
dockerfiles/: mongo.dockerfile  node.dockerfile  python36.dockerfile
documentation/: Deployment.md  Development.md  Install.md  Installation.md  ProjectArchitecture.md  ProjectOutline.md  Report.html  Report.md  Rust.md
src/: api_routes.rs  cli_utils.rs  config.rs  db.rs  file_utils.rs  git_utils.rs  gitapi.rs  gql_model.rs  gql_schema.rs  main.rs  model.rs  rabbit.rs  routes.rs  schema.rs  testing.rs  utils.rs
src/deployment/: config.rs  mod.rs  shipwreck.rs
src/docker/: docker_container.rs  mod.rs
src/network/: mod.rs
src/platform_executor/: mod.rs  orchestrator.rs  worker.rs
src/platform_executor/orchestration_executor/: db.rs  executor.rs  github_api.rs  mod.rs
src/platform_executor/worker_executor/: executor.rs  mod.rs
src/rabbit/: deployment_message.rs  log_message.rs  mod.rs  sysinfo_message.rs  util.rs  work_request_message.rs
src/worker/: mod.rs
static/: index.html
test_assets/: bad_shipwreck.toml  shipwreck.toml
