[package]
name = "kraken"
version = "0.0.1"
authors = ["ethanshry <ehshry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bollard = "0.7"
dotenv = "0.15.0"
env_logger = "0.7"
flate2 = "1.0"
fs_extra = "1.1.0"
futures-util = "0.3.5"
futures = "0.3.4"
juniper = "0.14"
juniper_rocket = "0.5"
lapin="1.2"
log = "0.4.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rocket = "0.4.5"
rusqlite="0.23"
serde = "1.0"
serde_json = "1.0"
strum = "0.18"
strum_macros = "0.18"
sysinfo = "0.14"
tar = "0.4"
tokio-amqp = "0.1.3"
tokio = { version= "0.2", features=["rt-threaded", "macros"]}
toml = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }