[package]
name = "kraken"
version = "0.0.1"
authors = ["ethanshry <ehshry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
async-std = "1.7.0"
base64 = "0.13.0"
bollard = "0.8"
dotenv = "0.15.0"
env_logger = "0.7"
flate2 = "1.0"
fs_extra = "1.2.0"
futures-util = "0.3.5"
futures = "0.3.4"
juniper = "0.14"
juniper_rocket = "0.5"
lapin="1.2"
log = "0.4"
pnet = "0.26"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rocket = { version = "0.4", default-features = false }
rocket_cors = "0.5"
rusqlite="0.24"
serde = "1.0"
serde_json = "1.0"
strum = "0.19"
strum_macros = "0.19"
sysinfo = "0.15"
tar = "0.4"
tokio-amqp = "0.1.3"
tokio = { version= "0.2", features=["rt-threaded", "macros"]}
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
queues = "1.1"
rand = "0.7"

# TODO look into warp over rocket