[package]
name = "kraken"
version = "0.1.0"
authors = ["ethanshry <ehshry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
async-std = {version = "1.8.0", features = ["attributes"]}
b64 = "0.4.0"
bollard = "0.9"
dotenv = "0.15.0"
env_logger = "0.8"
flate2 = "1.0"
fs_extra = "1.2.0"
futures-util = "0.3.5"
futures = "0.3.4"
juniper = "0.15"
juniper_rocket = "0.6"
lapin="1.6"
log = "0.4"
pnet = "0.27"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rocket = { version = "0.4", default-features = false }
rocket_cors = "0.5"
serde = "1.0"
serde_json = "1.0"
strum = "0.20"
strum_macros = "0.20"
sysinfo = "0.16"
tar = "0.4"
tokio-amqp = "1.0"
tokio = { version= "1.2", features=["full"]}
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
queues = "1.1"
rand = "0.8"